
    o	gsub() in 2.10.x could fail from stack overflow for extremely
	long strings due to temporary data being allocated on the
	stack.  Also, gsub() with fixed=TRUE is in some circumstances
	considerably faster.

    o	Several primitives, including attributes(), attr<-()
	interactive(), nargs() and proc.time(), did not check that
	they were called with the correct number of arguments.




	**************************************************
	*						 *
	*	       2.10 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 2.10.1 patched


NEW FEATURES

    o	The handling of line textures in the postscript() and pdf()
	devices was set up for round end caps (the only type which
	existed at the time): it has now been adjusted for butt endcaps.

    o	lchoose(a,k) is now defined as	log(abs(choose(a,k))), analogously
	to lfactorial().

    o	Although \eqn{} in Rd files is defined as a 'verbatim' macro,
	many packages expected \dots and \ldots to be interpreted
	there (as was the case in R < 2.10.0), so this is now done
	(using an ellipsis in HTML rendering).

    o	Escaping of braces in quoted strings in R-code sections of Rd
	files is allowed again.	 This had been changed for the new Rd
	format in R 2.10.0 but was only documented on the developer
	site and was handled inconsistently by the converters: text
	and example conversion removed the escapes but HTML conversion
	did not.

    o	The PCRE library has been updated to version 8.01, a bug-fix
	release.


BUG FIXES

    o	Using read.table(header=TRUE) on a header with an embedded new
	line would copy part of the header into the data.  (PR#14103)

    o	qpois(p = 1, lambda = 0) now gives 0 as for all other p.  (PR#14135)

    o	Functions related to string comparison (e.g. unique(), match())
	could cause crashes when used with strings not in the native
	encoding, e.g. UTF-8 strings on Windows.
	(PR#14114 and PR#14125)
